# veriphi

./: .gitignore  COMMERCIAL_LICENSE.md  HOWTO_COMMERCIAL.md  Makefile  README.md  package.json  pyproject.toml
node/: README.md
node/veriphi-core-node/: Cargo.toml  index.d.ts  index.node  package.json
node/veriphi-core-node/src/: index.js  lib.rs
node/veriphi_core/: package.json  tsconfig.json  tsconfig.test.json
node/veriphi_core/src/: index.ts  utils.ts
node/veriphi_core/tests/: index.test.ts
notebooks/: node_start.ipynb  py_start.ipynb  tsconfig.json
python/: README.md
python/veriphi_core/: __init__.py  interface.py  utils.py
python/veriphi_core/tests/: test_pylib.py
rust/: Cargo.toml  README.md
rust/veriphi-core/: Cargo.toml
rust/veriphi-core-wasi/: README.md  rust-toolchain.toml
rust/veriphi-core-wasi/src/: lib.rs
rust/veriphi-core-wasm/: Cargo.toml
rust/veriphi-core-wasm/.cargo/: config.toml
rust/veriphi-core-wasm/src/: lib.rs
rust/veriphi-core/src/: lib.rs
rust/veriphi-core/tests/: sdk_tests.rs
rust/veriphi-sdk/: Cargo.toml
rust/veriphi-sdk/src/: lib.rs
rust/veriphi-sdk/tests/: sdk_tests.rs
scripts/: build_wheels.sh
wasm/: README.md
wasm/veriphi_core/: package.json  tsconfig.json  vitest.config.ts  vitest.setup.ts  vitest.worker-shim.ts
wasm/veriphi_core/src/: index.ts  utils.ts
wasm/veriphi_core/tests/: index.test.ts
